# gnome-autounlock-keyring

./: .gitignore  Cargo.toml  flake.nix  result
src/: main.rs
src/tpm/: mod.rs  tpm_objects.rs  utils.rs
