[package]
name = "gnome-autounlock-keyring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
clevis-pin-tpm2 = { path = "../clevis-pin-tpm2" }
clap = { version = "4", features = ["derive"] }
rpassword = "7.3.1"