[package]
name = "gnome-autounlock-keyring"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7.3.1"
tss-esapi = { version = "7.2", features = ["generate-bindings"] }
josekit = "0.8.4"
base64 = { version = "0.21.5", features = [] }
tpm2-policy = "0.6.0"
dirs = "5"

[profile.release]
lto = "thin"
